# Information-Retrieval-System-Project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_REPORT.md  Dockerfile  Makefile  README.md  clean_for_presentation.ps1  clean_for_presentation.sh  docker-compose.yml  pyproject.toml
data/: documents.json  test_queries.json  user_history.json
data/initial-corpus/: 0008ad04-576e-4af4-92b1-2b3f5e3d4246.json  000a8b4f-5279-4ea3-bec6-23f03a323974.json  000d8d10-467f-4709-a9a8-e57f6ae12ce9.json  00d2cf63-f2a0-4b42-84f2-0fe1b231c0c8.json  010a7286-edfa-4143-9e46-462829787546.json  0133fdba-57de-465a-a29b-055328eb627f.json  01682546-f6f0-45e1-bcfd-695225de0680.json  01d1498d-8f1b-4a90-ac2c-23fffd098fd6.json  01dfb2d3-6e13-4e9b-b9d2-bb39b5722174.json  024912ce-a3e4-45cc-9ba8-2c04b0a62329.json  025d7f0a-70fb-4123-ace9-cc662e978793.json  02a9d347-7cfc-4aac-b9a3-e69a502a5869.json  02be2737-30c8-410e-9b4e-b1bd83f49385.json  02e17d79-b85d-4aa2-b9be-f15542be9eeb.json  (+1411 more)
docs/: ARCHITECTURE_ANALYSIS.md  BACKEND_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW.md  FRONTEND_IMPLEMENTATION_PLAN.md  FRONTEND_IMPLEMENTATION_STEPS.md  GUION.md  INDEX.md  PRESENTATION_README.md  PRE_RAG_STATUS.md  QUICK_START.md  RAG_IMPLEMENTATION_PLAN.md  RECOMMENDATION_MODULE.md  RESPUESTAS.md  paper.tex
presentation/: Datos.txt
src/: main.py  main_config.py  main_orchestator.py  rag_cli.py
tests/: test_recommender.py  test_user_history.py
ui/: README.md  __init__.py  app.py  config.py  state.py  utils.py
(+1095 files in other folders)
