[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sri-tecnologia"
version = "0.1.0"
description = "Information Retrieval System for Technology and Software domain using LSI"
requires-python = ">=3.10"
dependencies = [
    "scrapy>=2.11",
    "beautifulsoup4>=4.12",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "sentence-transformers>=2.7",
    "chromadb>=0.5",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "gradio>=4.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "commitizen>=3.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
